--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -1,8 +1,5 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/activity_main_fragment_list"
-    class="pe.test.myfragmentapp.ListFragment"
+    android:id="@+id/activity_content_fragment_content"
+    class="pe.test.myfragmentapp.ContentFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
-
-
-
